--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -14,8 +14,8 @@
   cursor: pointer;
 }
 .page-wrapper {
-  padding: 30px;
-  max-width: 1300px;
+  padding: 20px;
+  // max-width: 1300px;
 }
 
 $sizes: (
